force-app/main/default/objects/Car_Star_Level__c/Car_Star_Level__c.object-meta.xml
<CustomObject>
    <description>Holds star and stage information for each car.</description>
    <label>Car Star Level</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Star Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>