force-app/main/default/objects/Car_Star_Level__c/fields/Accel_Epic_Part_Slots__c.field-meta.xml
<CustomField>
    <fullName>Accel_Epic_Part_Slots__c</fullName>
    <label>Acceleration Epic Part Slots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>