force-app/main/default/objects/Car_Star_Level__c/fields/Blueprints_Required__c.field-meta.xml
<CustomField>
    <fullName>Blueprints_Required__c</fullName>
    <label>Blueprints Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>