force-app/main/default/objects/Car_Star_Level__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <description>Holds car data.</description>
    <inlineHelpText>Holds car data.</inlineHelpText>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Car Star Levels</relationshipLabel>
    <relationshipName>Car_Star_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>