force-app/main/default/objects/Car_Star_Level__c/fields/Handling_Max__c.field-meta.xml
<CustomField>
    <fullName>Handling_Max__c</fullName>
    <label>Handling Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>