force-app/main/default/objects/Car_Star_Level__c/fields/Max_Stage_Index__c.field-meta.xml
<CustomField>
    <fullName>Max_Stage_Index__c</fullName>
    <description>The max stage you can reach at this star (e.g., 3, 6, 8...).</description>
    <inlineHelpText>The max stage you can reach at this star (e.g., 3, 6, 8...).</inlineHelpText>
    <label>Max Stage Index</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>