force-app/main/default/objects/Car_Star_Level__c/fields/Nitro_Max__c.field-meta.xml
<CustomField>
    <fullName>Nitro_Max__c</fullName>
    <label>Nitro Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>