force-app/main/default/objects/Car_Star_Level__c/fields/Nitro_Rare_Part_Slots__c.field-meta.xml
<CustomField>
    <fullName>Nitro_Rare_Part_Slots__c</fullName>
    <label>Nitro Rare Part Slots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>