force-app/main/default/objects/Car_Star_Level__c/fields/Oc_Accel_Max__c.field-meta.xml
<CustomField>
    <fullName>Oc_Accel_Max__c</fullName>
    <label>Oc Accel Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>