force-app/main/default/objects/Car_Star_Level__c/fields/Rank_Max__c.field-meta.xml
<CustomField>
    <fullName>Rank_Max__c</fullName>
    <label>Rank Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>