force-app/main/default/objects/Car_Star_Level__c/fields/Rank_Min__c.field-meta.xml
<CustomField>
    <fullName>Rank_Min__c</fullName>
    <label>Rank Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>