force-app/main/default/objects/Car_Star_Level__c/fields/Row_Total_Rare_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Total_Rare_Count__c</fullName>
    <formula>BLANKVALUE(Speed_Rare_Part_Slots__c, 0) + 
BLANKVALUE(Accel_Rare_Part_Slots__c, 0) + 
BLANKVALUE(Hand_Rare_Part_Slots__c, 0) + 
BLANKVALUE(Nitro_Rare_Part_Slots__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Row Total Rare Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>