force-app/main/default/objects/Car_Star_Level__c/fields/Row_Total_Uncommon_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Total_Uncommon_Count__c</fullName>
    <formula>BLANKVALUE(Speed_Uncommon_Part_Slots__c, 0) + 
BLANKVALUE(Accel_Uncommon_Part_Slots__c, 0) + 
BLANKVALUE(Hand_Uncommon_Part_Slots__c, 0) + 
BLANKVALUE(Nitro_Uncommon_Part_Slots__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Row Total Uncommon Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>