force-app/main/default/objects/Car_Star_Level__c/fields/Speed_Epic_Part_Slots__c.field-meta.xml
<CustomField>
    <fullName>Speed_Epic_Part_Slots__c</fullName>
    <label>Speed Epic Part Slots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>