force-app/main/default/objects/Car_Star_Level__c/fields/Star_Level__c.field-meta.xml
<CustomField>
    <fullName>Star_Level__c</fullName>
    <label>Star Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>