force-app/main/default/objects/Car_Star_Level__c/fields/Top_Speed_Max__c.field-meta.xml
<CustomField>
    <fullName>Top_Speed_Max__c</fullName>
    <label>Top Speed Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>