force-app/main/default/objects/Car_Star_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Star_Level__c</columns>
    <columns>Blueprints_Required__c</columns>
    <columns>Rank_Min__c</columns>
    <columns>Rank_Max__c</columns>
    <columns>Top_Speed_Max__c</columns>
    <columns>Accel_Max__c</columns>
    <columns>Handling_Max__c</columns>
    <columns>Nitro_Max__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>